# Lyrix

./: CMakeLists.txt  LICENSE.md  README.md
.github/workflows/: ci.yml
Lyra.orion/: Lyra.elyra
Source/: Lyrix.cpp
Source/Aura/: package.json  tsconfig.json
Source/Aura/Elyra/: Configuration.json  Syntax.tmLanguage.json
Source/Aura/Output/: Client.js
Source/Aura/Source/: Client.ts
Source/Elyra/: Error.cpp  Error.hpp  Jobs.hpp  Lexer.cpp  Lexer.hpp
Source/Eura/: AnnotatedTextEdit.cpp  AnnotatedTextEdit.hpp  Any.cpp  Any.hpp  Array.hpp  Boolean.hpp  CancelParams.cpp  CancelParams.hpp  ChangeAnnotation.cpp  ChangeAnnotation.hpp  ChangeAnnotationIdentifier.hpp  CodeDescription.cpp  CodeDescription.hpp  Command.cpp  Command.hpp  CreateFile.cpp  CreateFile.hpp  CreateFileOptions.cpp  CreateFileOptions.hpp  Decimal.hpp  DeleteFile.cpp  DeleteFile.hpp  DeleteFileOptions.cpp  DeleteFileOptions.hpp  Diagnostic.cpp  Diagnostic.hpp  DiagnosticRelatedInformation.cpp  DiagnosticRelatedInformation.hpp  DiagnosticSeverity.hpp  DiagnosticTag.hpp  DocumentFilter.hpp  DocumentSelector.hpp  DocumentUri.hpp  ErrorCodes.hpp  GlobPattern.hpp  HoverParams.cpp  HoverParams.hpp  HoverResult.cpp  HoverResult.hpp  Integer.hpp  (+82 more)
Source/Lumina/: Error.cpp  Error.hpp  Style.hpp
Source/Nyra/: Architecture.cpp  Architecture.hpp  CLI.cpp  CLI.hpp  CharacterSets.hpp  Compile.cpp  Compile.hpp  Create.cpp  Create.hpp  Directory.cpp  Directory.hpp  Error.cpp  Error.hpp  File.cpp  File.hpp  Help.cpp  Help.hpp  Host.cpp  Host.hpp  Identifier.cpp  Identifier.hpp  Orion.cpp  Orion.hpp  Symlink.cpp  Symlink.hpp  System.cpp  System.hpp  Version.cpp  Version.hpp
Test/Eura/: AnnotatedTextEdit.cpp  CancelParams.cpp  ChangeAnnotation.cpp  CodeDescription.cpp
Test/Nyra/: Architecture.cpp  Host.cpp  Identifier.cpp  System.cpp
