cmake_minimum_required(VERSION 4.3.3)
set(CMAKE_CXX_EXTENSIONS off)
set(CMAKE_EXPORT_COMPILE_COMMANDS on)
message(STATUS "Building on ${CMAKE_BUILD_TYPE} mode...")
if(CMAKE_SYSTEM_NAME STREQUAL "Darwin")
    set(CMAKE_OSX_ARCHITECTURES arm64)
endif()
project(Lyrix VERSION 0.0.1 LANGUAGES CXX)
set(LYRIX_SYMLINK COMMAND ${CMAKE_COMMAND} -E create_symlink "${CMAKE_BINARY_DIR}/compile_commands.json" "${CMAKE_CURRENT_SOURCE_DIR}/compile_commands.json")
find_program(NPM_EXECUTABLE npm REQUIRED)
add_custom_target(Aura ALL COMMAND ${NPM_EXECUTABLE} run compile WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/Source/Aura COMMENT "Building Aura...")
add_executable(Lyrix)
add_dependencies(Aura Lyrix)
if(CMAKE_SYSTEM_NAME STREQUAL "Darwin")
    target_compile_definitions(Lyrix PRIVATE lyrix_darwin=)
elseif(CMAKE_SYSTEM_NAME STREQUAL "Windows")
    target_compile_definitions(Lyrix PRIVATE WIN32_LEAN_AND_MEAN= lyrix_windows=)
elseif(CMAKE_SYSTEM_NAME STREQUAL "Linux")
    target_compile_definitions(Lyrix PRIVATE lyrix_linux=)
else()
    message(FATAL_ERROR "Unsupported system: ${CMAKE_SYSTEM_NAME}. Lyrix currently supports Windows, Linux, and macOS.")
endif()
string(TOLOWER "${CMAKE_SYSTEM_PROCESSOR}" ARCH_LOWER)
if(ARCH_LOWER MATCHES "^(x86_64|amd64)$")
    target_compile_definitions(Lyrix PRIVATE lyrix_amd64=)
elseif(ARCH_LOWER MATCHES "^(aarch64|arm64)$")
    target_compile_definitions(Lyrix PRIVATE lyrix_arm64=)
else()
    message(FATAL_ERROR "Unknown architecture: ${CMAKE_SYSTEM_PROCESSOR}. Lyrix only recognizes amd64 and arm64")
endif()
target_compile_definitions(Lyrix PRIVATE lyrix_major=0 lyrix_middle=0 lyrix_minor=1)
target_include_directories(Lyrix PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/Source")
if(MSVC)
    target_compile_options(Lyrix PRIVATE /std:c++latest)
else()
    target_compile_features(Lyrix PRIVATE cxx_std_26)
endif()
if(CMAKE_CXX_COMPILER_ID MATCHES "GNU")
    target_compile_options(Lyrix PRIVATE -Werror -Wall -Wextra -Wpedantic -Wconversion -Wsign-conversion -fno-rtti -fno-exceptions)
    if(CMAKE_SYSTEN_NAME STREQUAL "Windows")
        target_compile_definitions(Lyrix PRIVATE _UNICODE=)
        target_compile_options(Lyrix PRIVATE -municode)
    endif()
elseif(CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
    if(CMAKE_CXX_COMPILER_FRONTEND_VARIANT STREQUAL "GNU")
        target_compile_options(Lyrix PRIVATE -Werror -Wall -Wextra -Wpedantic -Wconversion -Wsign-conversion -fno-rtti -fno-exceptions -Wno-dollar-in-identifier-extension)
        if(CMAKE_SYSTEN_NAME STREQUAL "Windows")
            target_compile_definitions(Lyrix PRIVATE _UNICODE=)
            target_compile_options(Lyrix PRIVATE -municode)
        endif()
    else()
        message(FATAL_ERROR "Unsupported Clang's front-end variant: ${CMAKE_CXX_COMPILER_FRONTEND_VARIANT}. Lyrix currently supports GNU Clang.")
    endif()
elseif(MSVC)
    target_compile_definitions(Lyrix PRIVATE _HAS_EXCEPTIONS=0)
    target_compile_options(Lyrix PRIVATE /utf-8 /Zc:preprocessor /W4 /WX /permissive- /GR- /EHs-c-)
else()
    message(FATAL_ERROR "Unsupported C++ compiler: ${CMAKE_CXX_COMPILER_ID}. Lyrix currently supports GNU GCC, GNU Clang, or MSVC.")
endif()
get_property(LYRIX_MULTI GLOBAL PROPERTY GENERATOR_IS_MULTI_CONFIG)
if(LYRIX_MULTI)
    target_compile_definitions(Lyrix PRIVATE $<$<CONFIG:Debug>:lyrix_debug=>)
    if(MSVC)
        target_compile_options(Lyrix PRIVATE $<$<CONFIG:Debug>:/Zi /Od> $<$<CONFIG:Release>:/GL /Ox>)
        target_link_options(Lyrix PRIVATE $<$<CONFIG:Debug>:/DEBUG> $<$<CONFIG:Release>:/LTCG>)
    else()
        target_compile_options(Lyrix PRIVATE $<$<CONFIG:Debug>:-g -O0> $<$<CONFIG:Release>:-O3>)
        target_link_options(Lyrix PRIVATE $<$<CONFIG:Debug>:-g>)
        if(CMAKE_CXX_COMPILER_ID MATCHES "GNU")
            target_compile_options(Lyrix PRIVATE $<$<CONFIG:Release>:-flto=auto>)
            target_link_options(Lyrix PRIVATE $<$<CONFIG:Release>:-flto=auto>)
        else()
            target_compile_options(Lyrix PRIVATE $<$<CONFIG:Release>:-flto=full>)
            target_link_options(Lyrix PRIVATE $<$<CONFIG:Release>:-flto=full>)
        endif()
    endif()
elseif(CMAKE_BUILD_TYPE STREQUAL "Debug")
    target_compile_definitions(Lyrix PRIVATE lyrix_debug=)
    if(MSVC)
        target_compile_options(Lyrix PRIVATE /Zi /Od)
        target_link_options(Lyrix PRIVATE /DEBUG)
    else()
        target_compile_options(Lyrix PRIVATE -g -O0)
        target_link_options(Lyrix PRIVATE -g)
    endif()
elseif(CMAKE_BUILD_TYPE STREQUAL "Release")
    if(MSVC)
        target_compile_options(Lyrix PRIVATE /GL /Ox)
        target_link_options(Lyrix PRIVATE /LTCG)
    else()
        target_compile_options(Lyrix PRIVATE -O3)
        if(CMAKE_CXX_COMPILER_ID MATCHES "GNU")
            target_compile_options(Lyrix PRIVATE -flto=auto)
            target_link_options(Lyrix PRIVATE -flto=auto)
        else()
            target_compile_options(Lyrix PRIVATE -flto=full)
            target_link_options(Lyrix PRIVATE -flto=full)
        endif()
    endif()
else()
    message(FATAL_ERROR "Unsupported configuration. Lyrix currently supports Debug and Release.")
endif()
file(GLOB_RECURSE LYRIX_SOURCES CONFIGURE_DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/Source/*.cpp")
target_sources(Lyrix PRIVATE ${LYRIX_SOURCES})
get_filename_component(LYRIX_MAIN "${CMAKE_CURRENT_SOURCE_DIR}/Source/Lyrix.cpp" ABSOLUTE)
list(REMOVE_ITEM LYRIX_SOURCES "${LYRIX_MAIN}")
file(GLOB_RECURSE LYRIX_TESTS CONFIGURE_DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/Test/*.cpp")
get_filename_component(LYRIX_TEST_PATH "${CMAKE_CURRENT_SOURCE_DIR}/Test" ABSOLUTE)
set(LYRIX_TESTING "")
enable_testing()
foreach(LYRIX_TEST_FILE ${LYRIX_TESTS})
    file(RELATIVE_PATH REL_PATH ${LYRIX_TEST_PATH} "${LYRIX_TEST_FILE}")
    string(REPLACE "/" "_" TARGET_NAME "${REL_PATH}")
    string(REPLACE "." "_" TARGET_NAME "${TARGET_NAME}")
    set(LYRIX_TEST_NAME "LYRIX_TEST_${TARGET_NAME}")
    if(CMAKE_SYSTEM_NAME STREQUAL "Darwin")
        add_executable(${LYRIX_TEST_NAME} ${LYRIX_SOURCES} ${LYRIX_TEST_FILE})
        target_compile_definitions(${LYRIX_TEST_NAME} PRIVATE lyrix_darwin=)
    elseif(CMAKE_SYSTEM_NAME STREQUAL "Windows")
        add_executable(${LYRIX_TEST_NAME} ${LYRIX_SOURCES} ${LYRIX_TEST_FILE})
        target_compile_definitions(${LYRIX_TEST_NAME} PRIVATE WIN32_LEAN_AND_MEAN= lyrix_windows=)
    else()
        add_executable(${LYRIX_TEST_NAME} ${LYRIX_SOURCES} ${LYRIX_TEST_FILE})
        target_compile_definitions(${LYRIX_TEST_NAME} PRIVATE lyrix_linux=)
    endif()
    if(ARCH_LOWER MATCHES "^(x86_64|amd64)$")
        target_compile_definitions(${LYRIX_TEST_NAME} PRIVATE lyrix_amd64=)
    else()
        target_compile_definitions(${LYRIX_TEST_NAME} PRIVATE lyrix_arm64=)
    endif()
    target_compile_definitions(${LYRIX_TEST_NAME} PRIVATE lyrix_major=0 lyrix_middle=0 lyrix_minor=1)
    target_include_directories(${LYRIX_TEST_NAME} PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/Source")
    if(MSVC)
        target_compile_options(${LYRIX_TEST_NAME} PRIVATE /std:c++latest)
    else()
        target_compile_features(${LYRIX_TEST_NAME} PRIVATE cxx_std_26)
    endif()
    if(CMAKE_CXX_COMPILER_ID MATCHES "GNU")
        target_compile_options(${LYRIX_TEST_NAME} PRIVATE -Werror -Wall -Wextra -Wpedantic -Wconversion -Wsign-conversion -fno-rtti -fno-exceptions)
        if(CMAKE_SYSTEN_NAME STREQUAL "Windows")
            target_compile_definitions(${LYRIX_TEST_NAME} PRIVATE _UNICODE=)
            target_compile_options(${LYRIX_TEST_NAME} PRIVATE -municode)
        endif()
    elseif(CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
        target_compile_options(${LYRIX_TEST_NAME} PRIVATE -Werror -Wall -Wextra -Wpedantic -Wconversion -Wsign-conversion -fno-rtti -fno-exceptions -Wno-dollar-in-identifier-extension)
        if(CMAKE_SYSTEN_NAME STREQUAL "Windows")
            target_compile_definitions(${LYRIX_TEST_NAME} PRIVATE _UNICODE=)
            target_compile_options(${LYRIX_TEST_NAME} PRIVATE -municode)
        endif()
    else()
        target_compile_definitions(${LYRIX_TEST_NAME} PRIVATE _HAS_EXCEPTIONS=0)
        target_compile_options(${LYRIX_TEST_NAME} PRIVATE /utf-8 /Zc:preprocessor /W4 /WX /permissive- /GR- /EHs-c-)
    endif()
    if(LYRIX_MULTI)
        target_compile_definitions(${LYRIX_TEST_NAME} PRIVATE $<$<CONFIG:Debug>:lyrix_debug=>)
        if(MSVC)
            target_compile_options(${LYRIX_TEST_NAME} PRIVATE $<$<CONFIG:Debug>:/Zi /Od> $<$<CONFIG:Release>:/GL /Ox>)
            target_link_options(${LYRIX_TEST_NAME} PRIVATE $<$<CONFIG:Debug>:/DEBUG> $<$<CONFIG:Release>:/LTCG>)
        else()
            target_compile_options(${LYRIX_TEST_NAME} PRIVATE $<$<CONFIG:Debug>:-g -O0> $<$<CONFIG:Release>:-O3>)
            target_link_options(${LYRIX_TEST_NAME} PRIVATE $<$<CONFIG:Debug>:-g>)
            if(CMAKE_CXX_COMPILER_ID MATCHES "GNU")
                target_compile_options(${LYRIX_TEST_NAME} PRIVATE $<$<CONFIG:Release>:-flto=auto>)
                target_link_options(${LYRIX_TEST_NAME} PRIVATE $<$<CONFIG:Release>:-flto=auto>)
            else()
                target_compile_options(${LYRIX_TEST_NAME} PRIVATE $<$<CONFIG:Release>:-flto=full>)
                target_link_options(${LYRIX_TEST_NAME} PRIVATE $<$<CONFIG:Release>:-flto=full>)
            endif()
        endif()
    elseif(CMAKE_BUILD_TYPE STREQUAL "Debug")
        target_compile_definitions(${LYRIX_TEST_NAME} PRIVATE lyrix_debug=)
        if(MSVC)
            target_compile_options(${LYRIX_TEST_NAME} PRIVATE /Zi /Od)
            target_link_options(${LYRIX_TEST_NAME} PRIVATE /DEBUG)
        else()
            target_compile_options(${LYRIX_TEST_NAME} PRIVATE -g -O0)
            target_link_options(${LYRIX_TEST_NAME} PRIVATE -g)
        endif()
    elseif(MSVC)
        target_compile_options(${LYRIX_TEST_NAME} PRIVATE /GL /Ox)
        target_link_options(${LYRIX_TEST_NAME} PRIVATE /LTCG)
    else()
        target_compile_options(${LYRIX_TEST_NAME} PRIVATE -O3)
        if(CMAKE_CXX_COMPILER_ID MATCHES "GNU")
            target_compile_options(${LYRIX_TEST_NAME} PRIVATE -flto=auto)
            target_link_options(${LYRIX_TEST_NAME} PRIVATE -flto=auto)
        else()
            target_compile_options(${LYRIX_TEST_NAME} PRIVATE -flto=full)
            target_link_options(${LYRIX_TEST_NAME} PRIVATE -flto=full)
        endif()
    endif()
    add_test(NAME ${LYRIX_TEST_FILE} COMMAND ${LYRIX_TEST_NAME})
    list(APPEND LYRIX_TESTING ${LYRIX_TEST_NAME})
endforeach()
add_custom_target(create_symlink ${LYRIX_SYMLINK})
add_custom_target(LYRIX_RUN_TESTS ALL COMMAND ${CMAKE_CTEST_COMMAND} --output-on-failure WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
add_dependencies(LYRIX_RUN_TESTS ${LYRIX_TESTING})